Ressource: Changer type pour catégorie dans le détail

--- a/auf_savoirs_en_partage/templates/savoirs/ressource_retrieve.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_retrieve.html
@@ -27,8 +27,8 @@
 <div><span class="label">Format:</span> {{ ressource.format }}</div>
 {% endif %}
 
-{% if ressource.type %}
-<div><span class="label">Type:</span> {{ ressource.type }}</div>
+{% if ressource.categorie %}
+<div><span class="label">Catégorie:</span> {{ ressource.categorie }}</div>
 {% endif %}
 
 {% if disciplines %}
