Adhésion: Séparation des Domaines de recherche et groupes de chercheurs

--- a/auf_savoirs_en_partage/templates/admin/chercheurs/chercheurgroupe/change_list.html
+++ b/auf_savoirs_en_partage/templates/admin/chercheurs/chercheurgroupe/change_list.html
@@ -1,1 +1,12 @@
 {% extends "alphafilter/change_list.html" %}
+{% load i18n admin_list adhesion_admin %}
+
+{% block filters %}
+<div id="changelist-filter">
+    <h2>{% trans 'Filter' %}</h2>
+    {% filter_statut %}
+    {% filter_groupe_chercheurs %}
+    {% filter_domaine_recherche %}
+</div>
+{% endblock %}
+
