--- a/auf_savoirs_en_partage/templates/admin/chercheurs/chercheur/change_list.html
+++ b/auf_savoirs_en_partage/templates/admin/chercheurs/chercheur/change_list.html
@@ -1,6 +1,13 @@
 {% extends "alphafilter/change_list.html" %}
 {% load i18n admin_list chercheurs_admin %}
 
+{% block extrastyle %}
+{{ block.super }}
+<style type="text/css" media="screen">
+ul.alphabetfilter li.first,.change-list ul.alphabetfilter li.first{width:2em!important;}
+</style>
+{% endblock %}
+
 {% block filters %}
 <div id="changelist-filter">
     <h2>{% trans 'Filter' %}</h2>
