Changement de Groupe de recherche en Équipe de recherche
- Sur l'espace chercheur
- Sur la fiche d'inscription au répertoire
- Sur les fiches chercheurs en consultation

--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -76,10 +76,10 @@
             <td>{{ chercheur.theme_recherche }}</td>
         </tr>
         {% endif %}
-        {% if chercheur.groupe_recherche %}
+        {% if chercheur.equipe_recherche %}
         <tr>
-            <td class="label">Groupe de recherche:</td>
-            <td>{{ chercheur.groupe_recherche }}</td>
+            <td class="label">Équipe de recherche:</td>
+            <td>{{ chercheur.equipe_recherche }}</td>
         </tr>
         {% endif %}
         {% if chercheur.mots_cles %}
