--- a/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
@@ -11,9 +11,9 @@
 	{% if not est_chercheur  %}
 		<p class="cadre" style="margin:10px auto;"><em>Pour rejoindre ce groupe, vous devez vous <a href="{% url chercheurs.views.login %}">connecter en tant que chercheur</a>.</em></p>
 	{% else %}{% if not est_membre %}
-		<p class="cadre" style="margin:10px auto;"><em><a href="{% url chercheurs.views.groupe_adhesion groupe.pk %}">Cliquer ici pour devenir membre</a>. Votre demande doit être approuvée par le responsable du groupe.</em></p>
+		<p class="cadre" style="margin:10px auto;"><em><a href="{% url chercheurs.views.groupe_adhesion groupe.pk %}">Cliquer ici pour devenir membre</a>. Votre demande doit être approuvée par le gestionnaire de communauté.</em></p>
 	{% else %}{% if not est_membre_actif %}
-		<p class="cadre" style="margin:10px auto;"><em>Votre demande d'adhésion n'a pas encore été approuvée par le responsable.</em></p>
+		<p class="cadre" style="margin:10px auto;"><em>Votre demande d'adhésion n'a pas encore été approuvée par le gestionnaire de communauté.</em></p>
 	{% endif %}{% endif %}{% endif %}
 
 	<h2>Derniers messages <a href="{% url rss_messages groupe.pk %}"><img src="/media/img/feed.png" /></a></h2>
