--- a/auf_savoirs_en_partage/templates/sites/index.html
+++ b/auf_savoirs_en_partage/templates/sites/index.html
@@ -10,7 +10,7 @@
 </ul>
 <h1>Sites &#8212; Sitothèque</h1>
 
-<h2>Recherche</h2>
+<h2>Rechercher</h2>
 
 <form method="get" action="">
     <table id="repertoire_recherche">
