--- a/auf_savoirs_en_partage/templates/chercheurs/index.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/index.html
@@ -18,7 +18,7 @@
 <form method="get" action="">
     <table>
         {% with search_form as form %}
-        {% include "render_form.html" %}
+        {% include "render_search_form.html" %}
         {% endwith %}
         <tr><th></th><td><input type="submit" class="bouton" value="Rechercher" /></td></tr>
     </table>
