--- a/auf_savoirs_en_partage/templates/savoirs/evenement_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_index.html
@@ -14,7 +14,9 @@
 
 <form action="" method="get">
     <table>
-        {{ search_form.as_table }}
+        {% with search_form as form %}
+        {% include "render_search_form.html" %}
+        {% endwith %}
         <tr><th></th><td><input type="submit" name="action" value="Rechercher" /></td></tr>
     </table>
 </form>
