--- a/auf_savoirs_en_partage/templates/sites/index.html
+++ b/auf_savoirs_en_partage/templates/sites/index.html
@@ -14,8 +14,10 @@
 
 <form method="get" action="">
     <table id="repertoire_recherche">
-    {{search_form.as_table}}
-    <tr><th></th><td><input type="submit" class="bouton" value="Rechercher" /></td></tr>
+        {% with search_form as form %}
+        {% include "render_search_form.html" %}
+        {% endwith %}
+		<tr><th></th><td><input type="submit" class="bouton" value="Rechercher" /></td></tr>
     </table>
 </form>
 
