--- a/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/groupe_retrieve.html
@@ -9,7 +9,7 @@
 	<p>{{ groupe.page_accueil|safe }}</p>
 
 	{% if not est_chercheur  %}
-		<p class="cadre" style="margin:10px auto;"><em>Pour rejoindre ce groupe, vous devez vous <a href="{% url chercheurs.views.login %}">connecter en tant que chercheur</a>.</em></p>
+		<p class="cadre" style="margin:10px auto;"><em>Pour rejoindre cette communauté, vous devez vous <a href="{% url chercheurs.views.login %}">connecter en tant que chercheur</a>.</em></p>
 	{% else %}{% if not est_membre %}
 		<p class="cadre" style="margin:10px auto;"><em><a href="{% url chercheurs.views.groupe_adhesion groupe.pk %}">Cliquer ici pour devenir membre</a>. Votre demande doit être approuvée par le gestionnaire de communauté.</em></p>
 	{% else %}{% if not est_membre_actif %}
@@ -42,7 +42,7 @@
 			{% endfor %}
 		</ul>
 		{% if plus_que_20 %}
-			<a href="{% url groupe_membres groupe.pk %}">Voir tous les chercheurs de ce groupe</a>
+			<a href="{% url groupe_membres groupe.pk %}">Voir tous les chercheurs de cette communauté</a>
 		{% endif %}
 	{% endif %}
 	{% if groupe.recherches.count %}
