--- a/auf_savoirs_en_partage/templates/admin/base_site.html
+++ b/auf_savoirs_en_partage/templates/admin/base_site.html
@@ -1,7 +1,15 @@
 {% extends "admin/base.html" %}
-{% load i18n %}
+{% load i18n admin_tools_menu_tags %}
+
+{% block title %}{{ title }} | {% trans 'Django site admin' %}{% endblock %}
 
 {% block extrastyle %}
+{{ block.super }}
+{% if user.is_active and user.is_staff %}
+{% if not is_popup %}
+{% admin_tools_render_menu_css %}
+{% endif %}
+{% endif %}
 <style>
 .selector {
 width: 840px!important;
@@ -17,10 +25,14 @@ width: 400px!important;
 </style>
 {% endblock %}
 
-{% block title %}{{ title }} | {% trans 'Django site admin' %}{% endblock %}
-
 {% block branding %}
 <h1 id="site-name">{% trans 'Django administration' %}</h1>
 {% endblock %}
 
-{% block nav-global %}{% endblock %}
+{% block nav-global %}
+{% if user.is_active and user.is_staff %}
+{% if not is_popup %}
+{% admin_tools_render_menu %}
+{% endif %}
+{% endif %}
+{% endblock %}
