--- a/auf_savoirs_en_partage/templates/chercheurs/perso.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/perso.html
@@ -4,7 +4,7 @@
 
 <ul class="actions">
     <li><a href="{% url chercheurs.views.index %}">Tous les chercheurs</a></li>
-    <li><a href="{% url chercheurs.views.groupe_index %}">Groupe de chercheurs</a></li>
+    <li><a href="{% url chercheurs.views.groupe_index %}">Communauté de chercheurs</a></li>
     <li><a href="{% url recherches %}">Recherches sauvegardées</a></li>
     <li><a href="{% url chercheurs.views.edit %}">Éditer votre fiche</a></li>
     <li><a href="{% url chercheurs-password-change %}">Modifier votre mot de passe</a></li>
