--- a/auf_savoirs_en_partage/templates/savoirs/stats.html
+++ b/auf_savoirs_en_partage/templates/savoirs/stats.html
@@ -129,12 +129,12 @@
         </tbody>
     </table>
 
-    <h2>Chercheurs par groupe de chercheurs</h2>
+    <h2>Chercheurs par communauté de chercheurs</h2>
 
     <table>
         <thead>
             <tr>
-                <th>Groupe de chercheurs</th>
+                <th>Communauté de chercheurs</th>
                 <th>Hommes</th>
                 <th>Femmes</th>
                 <th>Total</th>
