--- a/auf_savoirs_en_partage/templates/chercheurs/actions.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/actions.html
@@ -4,4 +4,4 @@
 <li><a href="{% url chercheurs-login %}">Se connecter</a></li>
 <li><a href="{% url chercheurs.views.inscription %}">S'inscrire</a></li>
 {% endif %}
-<li><a href="{% url chercheurs.views.groupe_index %}">Communauté&nbsp;de&nbsp;chercheurs</a></li>
+<li><a href="{% url chercheurs.views.groupe_index %}">Communautés&nbsp;de&nbsp;chercheurs</a></li>
