--- a/auf_savoirs_en_partage/templates/admin/rappels/chercheurrappel/change_list.html
+++ b/auf_savoirs_en_partage/templates/admin/rappels/chercheurrappel/change_list.html
@@ -8,6 +8,18 @@ ul.alphabetfilter li.first,.change-list ul.alphabetfilter li.first{width:2em!imp
 </style>
 {% endblock %}
 
+{% block extrahead %}
+{{ block.super }}
+<script type="text/javascript">
+(function($) {
+	$(function($) {
+		$('.actions option:selected').removeAttr();
+		$('.actions option[value="rappel"]').attr("selected", "selected");
+	});
+})(django.jQuery);
+</script>
+{% endblock %}
+
 {% block content_title %}<h1>Sélectionnez les chercheurs destinataires du rappel</h1>{% endblock %}
 {% block object-tools %}{% endblock %}
 
