Menu droit fonctionne pour tous les briques

--- a/auf_savoirs_en_partage/templates/chercheurs/index.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/index.html
@@ -3,6 +3,10 @@
 {% load form_tags %}
 {% load sep %}
 
+{% block sep_menu_droite %}
+{% sep_menu_brique discipline_active region_active %}
+{% endblock %}
+
 {% block contenu %}
 {% autopaginate chercheurs 20 %}
 
