--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -101,7 +101,7 @@
 
                 <div id="regions_disciplines">
                     <div>
-                        {% sep_menu discipline_active region_active %}
+                        {% block sep_menu_droite %}{% sep_menu discipline_active region_active %}{% endblock %}
                     </div>
                 </div>
             </div>
