[#3086] Correction des fichiers statiques

--- a/auf_savoirs_en_partage/static/css/ie6.css
+++ b/auf_savoirs_en_partage/static/css/ie6.css
@@ -1,6 +1,4 @@
-body {
-	behavior:url("/js/csshover.htc");
-}#col-menu { margin:30px 0px 0px 0px; }
+#col-menu { margin:30px 0px 0px 0px; }
 /*
 #contenu { width:744px; margin:100px 0px 50px 0px; }
 */
