Sitotheque: Montrer dans la page de détail site soutenu et engin de recherche

--- a/auf_savoirs_en_partage/templates/sites/retrieve.html
+++ b/auf_savoirs_en_partage/templates/sites/retrieve.html
@@ -7,6 +7,10 @@
 <br />
 <p>{{site.description}}</p>
 
+{% if site.site_auf %}
+<p><strong>Site soutenu par l'AUF</strong></p>
+{% endif %}
+
 <table>
     <tr>
         <td><strong>Type:</strong></td>
