[#3408] Sitothèque: Mentionner Site recommendé par l'AUF

--- a/auf_savoirs_en_partage/templates/sites/retrieve.html
+++ b/auf_savoirs_en_partage/templates/sites/retrieve.html
@@ -9,6 +9,8 @@
 
 {% if site.site_auf %}
 <p><strong>Site soutenu par l'AUF</strong></p>
+{% else %}
+<p><strong>Site recommandé par l'AUF</strong></p>
 {% endif %}
 
 <table>
