fix image static

--- a/auf_savoirs_en_partage/templates/chercheurs/groupe_message.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/groupe_message.html
@@ -1,11 +1,11 @@
 {% extends "container_base.html" %}
-{% load pagination_tags %}
+{% load pagination_tags staticfiles %}
 {% load url from future %}
 
 {% block contenu %}
 {% autopaginate messages 20 %}
 
-<a class="rss-icon" href="{% url "rss_messages" groupe.pk %}"><img src="/media/img/feed.png" /></a>
+<a class="rss-icon" href="{% url "rss_messages" groupe.pk %}"><img src="{% static 'img/feed.png' %}" /></a>
 
 <h1>{{ groupe }}</h1>
 <p><a href="{% url "groupe_retrieve" groupe.pk %}">Retour à la page du groupe</a></p>
