Le champ expertises_auf était ajouté

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -124,6 +124,7 @@
             {% form_field forms.chercheur.membre_reseau_institutionnel_nom %}
             {% form_field forms.chercheur.membre_reseau_institutionnel_fonction %}
             {% form_field forms.chercheur.membre_reseau_institutionnel_dates %}
+            {% form_field forms.chercheur.expertises_auf %}
         </table>
     </fieldset>
 </fieldset>
