--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -33,7 +33,7 @@
     </table>
 </fieldset>
 
-<fieldset>
+<fieldset class="horizontal-radio-buttons">
     <legend>Informations académiques</legend>
     <table>
         {% form_field forms.chercheur.grade_universitaire %}
