--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -7,7 +7,7 @@
     <div>{{ chercheur.courriel_display }}</div>
     {% else %}
     <a href="/chercheurs/{{ chercheur.id }}/envoie_courrier"}}>
-        Envoyer un courrier
+        Envoyer un message
     </a>
     {% endif %}
     <div><span class="label">Région: </span>{{ chercheur.region.nom }}</div>
